# vm_translator

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  run.bat  run.sh  test.bat  validate.py
script/: code_gen.py  parser.yaml  segment.yaml
script/template/: ClassName.h
script/template_parser/: ClassName.cc  ClassName.h
script/template_segment/: ClassName.cc  ClassName.h
script/template_token/: ClassName.cc  ClassName.h
src/: CMakeLists.txt  CodeBlock.cc  CodeBlock.h  CodeBlockBuilder.cc  CodeBlockBuilder.h  CodeWriter.cc  CodeWriter.h  ConstantSegmentTranslator.cc  ConstantSegmentTranslator.h  Context.h  ContextHandler.cc  ContextHandler.h  FileContext.cc  FileContext.h  FunctionContext.cc  FunctionContext.h  LineReader.cc  LineReader.h  Parser.cc  Parser.h  ParserArithmeticLogic.cc  ParserArithmeticLogic.h  ParserBase.h  ParserBranch.cc  ParserBranch.h  ParserFunction.cc  ParserFunction.h  ParserMemoryAccess.cc  ParserMemoryAccess.h  ParserReturn.cc  ParserReturn.h  PointerSegmentTranslator.cc  PointerSegmentTranslator.h  RestoreBlock.cc  RestoreBlock.h  StackSegmentTranslator.cc  StackSegmentTranslator.h  StaticSegmentTranslator.cc  StaticSegmentTranslator.h  TempSegmentTranslator.cc  (+5 more)
src/parser/: CMakeLists.txt  LineReader.cc  LineReader.h  ParseResult.cc  ParseResult.h  Parser.cc  Parser.h
src/parser/src/: CMakeLists.txt  ParserArithmetic.h  ParserBase.cc  ParserBase.h  ParserBranch.cc  ParserBranch.h  ParserFunc.h  ParserLogic.cc  ParserLogic.h  ParserMemory.cc  ParserMemory.h
src/parser/src/parser_arithmetic/: CMakeLists.txt  ParserAdd.cc  ParserAdd.h  ParserArithmetic.cc  ParserArithmetic.h  ParserEq.cc  ParserEq.h  ParserGt.cc  ParserGt.h  ParserLt.cc  ParserLt.h  ParserNeg.cc  ParserNeg.h  ParserSub.cc  ParserSub.h
src/parser/src/parser_branch/: CMakeLists.txt  ParserBranch.h  ParserGoTo.cc  ParserGoTo.h  ParserIfGoTo.cc  ParserIfGoTo.h  ParserLabel.cc  ParserLabel.h
src/parser/src/parser_func/: CMakeLists.txt  ParserCall.cc  ParserCall.h  ParserFunc.cc  ParserFunc.h  ParserFunction.cc  ParserFunction.h  ParserReturn.cc  ParserReturn.h
src/parser/src/parser_logic/: CMakeLists.txt  ParserAnd.cc  ParserAnd.h  ParserLogic.h  ParserNot.cc  ParserNot.h  ParserOr.cc  ParserOr.h
src/parser/src/parser_memory/: CMakeLists.txt  ParserMemory.h  ParserPop.cc  ParserPop.h  ParserPush.cc  ParserPush.h
src/token/: CMakeLists.txt  TokenArithmetic.h  TokenBase.cc  TokenBase.h  TokenBranch.h  TokenFunc.cc  TokenFunc.h  TokenLogic.h  TokenMemory.h
src/token/token_arithmetic/: CMakeLists.txt  TokenAdd.cc  TokenAdd.h  TokenArithmetic.cc  TokenArithmetic.h  TokenEq.cc  TokenEq.h  TokenGt.cc  TokenGt.h  TokenLt.cc  TokenLt.h  TokenNeg.cc  TokenNeg.h  TokenSub.cc  TokenSub.h
src/token/token_branch/: CMakeLists.txt  TokenBranch.cc  TokenBranch.h  TokenGoTo.cc  TokenGoTo.h  TokenIfGoTo.cc  TokenIfGoTo.h  TokenLabel.cc  TokenLabel.h
src/token/token_func/: CMakeLists.txt  TokenCall.cc  TokenCall.h  TokenFunc.h  TokenFunction.cc  TokenFunction.h  TokenReturn.cc  TokenReturn.h
src/token/token_logic/: CMakeLists.txt  TokenAnd.cc  TokenAnd.h  TokenLogic.cc  TokenLogic.h  TokenNot.cc  TokenNot.h  TokenOr.cc  TokenOr.h
src/token/token_memory/: CMakeLists.txt  TokenMemory.cc  TokenMemory.h  TokenPop.cc  TokenPop.h  TokenPush.cc  TokenPush.h
src/translator/: CMakeLists.txt  CodeWriter.cc  Translator.cc  Translator.h
src/translator/code_block/: CMakeLists.txt  CodeBlock.cc  CodeBlock.h  CodeBlockBuilder.cc  CodeBlockBuilder.h  RestoreBlock.cc  RestoreBlock.h
src/translator/code_manager/: CMakeLists.txt  CodeFile.cc  CodeFile.h  CodeFunction.cc  CodeFunction.h  CodeManager.cc  CodeManager.h
src/translator/decoder/: CMakeLists.txt  DecodeResult.cc  DecodeResult.h  Decoder.cc  Decoder.h  DecoderState.cc  DecoderState.h
src/translator/decoder/src/: CMakeLists.txt  DecoderBase.cc  DecoderBase.h
src/translator/decoder/src/decoder_arithmetic/: CMakeLists.txt  DecoderAdd.cc  DecoderAdd.h  DecoderArithmetic.cc  DecoderArithmetic.h  DecoderEq.cc  DecoderEq.h  DecoderGt.cc  DecoderGt.h  DecoderLt.cc  DecoderLt.h  DecoderNeg.cc  DecoderNeg.h  DecoderSub.cc  DecoderSub.h
src/translator/decoder/src/decoder_branch/: CMakeLists.txt  DecoderBranch.cc  DecoderBranch.h  DecoderGoTo.cc  DecoderGoTo.h  DecoderIfGoTo.cc  DecoderIfGoTo.h  DecoderLabel.cc  DecoderLabel.h
src/translator/decoder/src/decoder_func/: CMakeLists.txt  DecoderCall.cc  DecoderCall.h  DecoderFunc.cc  DecoderFunc.h  DecoderFunction.cc  DecoderFunction.h  DecoderReturn.cc  DecoderReturn.h
src/translator/decoder/src/decoder_logic/: CMakeLists.txt  DecoderAnd.cc  DecoderAnd.h  DecoderLogic.cc  DecoderLogic.h  DecoderNot.cc  DecoderNot.h  DecoderOr.cc  DecoderOr.h
src/translator/decoder/src/decoder_memory/: CMakeLists.txt  DecoderMemory.cc  DecoderMemory.h  DecoderPop.cc  DecoderPop.h  DecoderPush.cc  DecoderPush.h
src/translator/segment/: ArgumentSegment.cc  ArgumentSegment.h  CMakeLists.txt  ConstantSegment.cc  ConstantSegment.h  LocalSegment.cc  LocalSegment.h  PointerSegment.cc  PointerSegment.h  StackSegment.cc  StackSegment.h  StaticSegment.cc  StaticSegment.h  TempSegment.cc  TempSegment.h  ThatSegment.cc  ThatSegment.h  ThisSegment.cc  ThisSegment.h  VmSegment.cc  VmSegment.h
src/type/: OperationType.h  SegmentType.h
tests/: CMakeLists.txt  main.cc
tests/project/08/FunctionCalls/NestedCall/: Sys.vm
tests/unittest/: CMakeLists.txt  CodeWriterUnittest.cc  StackSegmentTranslatorUnittest.cc  VmSegmentTranslatorUnittest.cc
